syntax = "proto3";
package quip.matchmaker;
option go_package="github.com/GambitLLC/quip/libs/pb/matchmaker";

import "matchmaker/messages.proto";

// End user notification message. Needs to be sent as a message
// for notifying other friends or other party members.
message StatusUpdateMessage {
  repeated string targets = 1;
  Status update = 2;
}

// End user notification message. Needs to be sent as a message
// for notifying other friends or other party members.
message QueueUpdateMessage {
  repeated string targets = 1;
  QueueUpdate update = 2;
}

// Internal broker message. Mainly sent by director or gameservers.
message MatchUpdateMessage {
  oneof update {
    MatchCancelled match_cancelled = 1;
    MatchConnection match_started = 2;
    MatchResults match_finished = 3;
  }
}