syntax = "proto3";
package quip;
option go_package="github.com/GambitLLC/quip/packages/pb";

// Indicates change in queue status.
message QueueUpdate {
  // Identifies the entities whose queue has received an update.
  repeated string targets = 1;

  oneof update {
    string stopped = 2;
    MatchDetails found = 3;
  }
}

message MatchDetails {
  string connection = 1;
}

enum Status {
  OFFLINE = 0;
  IDLE = 1;
  SEARCHING = 2;
  PLAYING = 3;
}

// Indicates change in status.
message StatusUpdate {
  repeated string targets = 1;

  Status status = 2;
}